.deploy/projects/sqaada/sg.tf
resource "aws_security_group" "ecs_tasks" {
  name        = "${var.service_name}-${var.env_name}-ecs-tasks-sg"
  description = "Security group for ECS tasks"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(
    local.common_tags,
    {
      Name = "${var.service_name}-${var.env_name}-ecs-tasks-sg"
    }
  )
}
